# BatBot

./: .gitignore  README.md
Motor_Driver/: .cproject  .project  driver.h  main.c
Motor_Driver/.launches/: Motor_Driver.launch
Motor_Driver/Debug/: Motor_Driver.out  Motor_Driver_linkInfo.xml
Motor_drivers/: README.md  main.c
Motor_drivers/Debug/: Motor_Driver.map  ccsObjs.opt  makefile  objects.mk  subdir_rules.mk
VL53L7CX_SimpleRanging/: .gitignore  .mxproject  .project  VL53L7CX_SimpleRanging.ioc
VL53L7CX_SimpleRanging/Drivers/BSP/IKS4A1/: iks4a1_motion_sensors.c
VL53L7CX_SimpleRanging/Inc/: RTE_Components.h  alt_main.h  app_mems.h  app_tof.h  data.h  data.hpp  iks4a1_conf.h  integrator.h  integrator.hpp  main.h  motors.h  rotation.h  rotation.hpp  stm32f4xx_it.h  stm32f4xx_nucleo.h  stm32f4xx_nucleo_conf.h  triple.hpp  util.h
VL53L7CX_SimpleRanging/STM32CubeIDE/: .cproject  .project
VL53L7CX_SimpleRanging/Src/: alt_main.cpp  app_mems.c  app_tof.c  app_tof_pin_conf.c  custom_ranging_sensor.c  data.c  data.cpp  integrator.c  integrator.cpp  main.c  motors.c  rotation.c  rotation.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_nucleo.c  stm32f4xx_nucleo_bus.c  util.c
src/common/protocol/: Cargo.toml  build.rs
src/common/protocol/c-src/: Makefile  checker.cpp  checker.hpp  const.hpp  hal.cpp  hal.hpp  protocol.cpp  protocol.hpp  wrapper.hpp
src/common/protocol/c-target/: Makefile
src/common/protocol/examples/: test-arduino.rs  test-bl.rs  test-ble.rs
src/common/protocol/src/: lib.rs  protocol.rs  protocol_test.rs
src/common/protocol/src/serial/: bluetooth.rs  bluetooth2.rs  bluetooth_low_energy.rs  common_bl.rs  mod.rs  testserial.rs
src/common/protocol/test-arduino/lib/: c-src
src/common/protocol/test-arduino/src/: main.cpp
src/pc/project-visualizer/: Cargo.toml  tree
src/pc/project-visualizer/dummy-robot/lib/: protocol
src/pc/project-visualizer/dummy-robot/src/: main.cpp
src/pc/project-visualizer/src/: car.rs  infinite_grid.rs  input.rs  main.rs  statistcs.rs
src/pc/project-visualizer/src/ble_connector/: data.rs  mod.rs
