[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
#things for bluetooth
bluer = { version = "0.16.1", default-features = false, optional=true}  #features = ["bluetoothd"], default-features = false }
tokio = { version = "1.35.1", features =["rt-multi-thread"], default-features=false, optional=true}
futures = {version="0.3", optional = true}

#things for test-serial
rand = {version="0.8"}#, optional = true}
rayon = {version="1.8", optional = true}

[build-dependencies]
# for creating c->rust bindings
bindgen = "0.69"


[features]
default=["ble"]
#default=["rfcomm", "test-serial"]
ble=["dep:bluer", "bluer/bluetoothd", "dep:tokio", "dep:futures"]
rfcomm=["dep:bluer", "bluer/rfcomm", "dep:tokio", "dep:futures"]
test-serial=["dep:rayon"]



#example for testing simple send/receive to/from bluetooth (the bluetooth device must reply)
[[example]]
name = "test-bl"
crate-type = ["bin"]
required-features = ["rfcomm"]

[[example]]
name = "test-ble"
crate-type = ["bin"]
required-features = ["ble"]