[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
#things for bluetooth
bluer = { version = "0.16.1", default-features = false, optional=true}  #features = ["bluetoothd"], default-features = false }
tokio = { version = "1.35.1", features = ["rt-multi-thread"], optional=true, default-features = false}
futures = {version="0.3", optional = true, default-features =false}
rand = {version="0.8", optional=true, default-features =false, features = ["getrandom", "std", "std_rng"]}
rayon = {version="1.8", optional = true}

[build-dependencies]
# for creating c->rust bindings
bindgen ={version="0.69", default-features=false}


[features]
#default=["ble"]
default=["rfcomm", "test-serial", "ble"]
ble=["bluer", "bluer/bluetoothd", "dep:tokio", "dep:futures"]
rfcomm=["bluer", "bluer/rfcomm", "dep:tokio", "dep:futures"]
test-serial=["dep:rayon", "dep:rand"]
bluer=["dep:bluer"]


#example for testing simple send/receive to/from bluetooth (the bluetooth device must reply)
[[example]]
name = "test-bl"
crate-type = ["bin"]
required-features = ["rfcomm"]

[[example]]
name = "test-ble"
crate-type = ["bin"]
required-features = ["ble"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"