[package]
name = "project-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy-aabb-instancing = "0.10"
rand= "0.8"
protocol= {path="../../common/protocol", features = ["ble"]}
#tokio = "1.35"
#[dependencies]
#bevy = { version = "0.11" }